Meshes, labels, zoom, robot

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			  <div id="2K" class="menu-item">2K</div>
 			  <div id="2K+" class="menu-item">2K+</div>
 			  <div id="3K" class="menu-item">3K</div>
+			  <div id="3K+" class="menu-item">3K+</div>
 			</div>
 		</div>
 	</body>
